# mlops_sample

./: .env.example  .gitignore  Dockerfile.dsmlflow  Dockerfile.loadtest  Dockerfile.mlflow  Dockerfile.server  LICENSE  Makefile  README.md  docker-compose.mlflow.yml  docker-compose.server.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  readme.md
.dvc/: config
.github/workflows/: build-server-container.yml  build-uv.yml  locust.yml  main.yaml
column/: abc.py  cfs2017.py  test_cfs2017.py
dataset/: .gitignore  cfs_2017.csv.dvc
loadtest/: locust.py
repositories/: abc.py  disk.py  dummy.py  mlflow.py  noop.py  repo.py  s3.py  sqlite.py  struct.py
server/: datastructure.py  enum_maps.py  error.py  inference.py  launcher.py  main.py  model.py  response.py  server.py  transformation.py
test/: output.csv
train/: column.py  data_cleaner.py  data_describer.py  data_io.py  data_loader.py  data_transform.py  datacleaner.py  dataset.py  datatransform.py  main.py  manfest.py  model.py  post_test.py  scenario_manager.py  sstruct.py  test_data_cleaner.py  test_data_io.py  test_data_loader.py  test_data_transform.py  test_scenario_manager.py  test_sstruct.py  train.py  wrapper.py
train_config/: base_train.json  base_train_s3.json  baseline.json  distance_log.json  log_gboosting.json  log_post_test.json  log_transform.json  log_transform_100k.json  log_transform_1m.json  normalized.json  ohe_export_hazmat.json  ohe_export_hazmat_sqlite.json  ohe_mode.json  ohe_naics.json  standard_scaler.json  standard_scaler_gboosting.json
