[project]
name = "mlops-sample"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.46",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
